--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -21,4 +21,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+    - name: Trivy FS Scan
+      run: |
+       trivy fs --format table -o trivy-fs-report.html .
+
+
     
