--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -30,5 +30,17 @@ jobs:
        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Build Docker Image
+      run: |
+       docker build -t devopsajit85/Task-Master:latest .    
+    - name: Trivy image Scan
+      run: |
+       trivy image --format table -o trivy-fs-image.html devopsajit85/Task-Master:latest 
+       
+
 
     
