--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -40,6 +40,15 @@ jobs:
     - name: Trivy image Scan
       run: |
        trivy image --format table -o trivy-fs-image.html devopsajit85/task-master:latest 
+
+       - name: Login to Docker Hub
+         uses: docker/login-action@v3
+         with:
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
+         password: ${{ secrets.DOCKERHUB_TOKEN }}
+         - name: Push Docker Image
+           run: |
+           docker push adijaiswal/boardgame:latest
        
 
 
