--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -48,7 +48,7 @@ jobs:
        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push Docker Image
       run: |
-       docker push adijaiswal/boardgame:latest
+       docker push devopsajit85/task-master:latest
        
 
 
